Users can now own multiple buildings
